--- a/styles/styles.css
+++ b/styles/styles.css
@@ -401,6 +401,10 @@ button {
 @media(max-width:748px) {
     .logo {
         height: 10vh;
+        position: sticky;
+       left: 70%;
+       top:10%;
+       z-index: 4;
 
     }
 
@@ -435,9 +439,10 @@ button {
      
         width: 100%;
         height: 100vh;
-        justify-content: space-evenly;
-        gap: 5vh;
-        padding-top: 5vh;
+        align-items: center;
+        justify-content: center;
+        gap: 0%;
+        padding-top: 0vh;
        
       
      
